# RecallForge

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  alembic.ini  pyproject.toml
docs/: M1-design.md  M2-design.md  M2-optimizations.md  M3-design.md  M4-design.md  M5-design.md  M6-design.md  chunkflow_migration.md  console-upload-ux-spec.md  metadata-recall-bridge-spec.md  parent_chunk_quality_spec.md
docs/adr/: 0001-embedding-storage-strategy.md
migrations/: env.py
migrations/versions/: 0001_create_initial_tables.py  0002_fix_query_logs_status_constraint.py  0003_add_knowledge_base_governance.py
recallforge/: config.py  context.py
recallforge/api/: __init__.py  answering.py  app.py  auth.py  context.py  dependencies.py  errors.py  governance_service.py  knowledge_service.py  schemas.py
recallforge/chunking/: __init__.py  docling_parser.py  mineru_parser.py  schema.py  (+2 more)
scripts/: restart.ps1  start.ps1  stop.ps1
tests/: test_config.py  test_contract_terms_chunker.py  test_embedding_backfill.py  test_embedding_columns.py  test_embedding_provider.py  test_integration_answer.py  test_integration_ingest.py  test_integration_retrieve.py  test_m2_ingest.py  test_m2_optimizations.py  test_m4_query_filter_refusal.py  test_m4_references_context.py  test_m4_retrieval_service.py  test_m5_answer_generation.py  test_m5_api_routes.py  test_m5_api_schemas.py  test_m5_auth_context.py  test_m5_boundary_scan.py  test_m5_console_static.py  test_m5_knowledge_service.py  test_m6_api_schemas.py  test_m6_boundary_scan.py  test_m6_kb_permissions.py  test_m6_knowledge_base_routes.py  test_migrations.py  test_models.py  test_repository.py  test_vector_preflight.py  test_vector_store_contract.py
(+87 files in other folders)
