[project]
name = "recallforge"
version = "0.1.0"
description = "High-quality RAG system with recall-first design"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "pgvector",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "psycopg2-binary",
    "alembic",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
