[project]
name = "recallforge"
version = "0.1.0"
description = "High-quality RAG system with recall-first design"
requires-python = ">=3.11"
dependencies = [
    "pgvector",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "psycopg2-binary",
    "alembic",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv",
    "httpx",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "PyJWT>=2.8",
    "pypdf>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring external services (DB, DashScope)",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
